[package]
name = "youran"
version = "0.2.1"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "code with peace"
license = "MIT"
repository = "https://github.com/hangj/youran"
documentation = "https://docs.rs/youran/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yr"
path = "bin/yr/yr.rs"


[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
dirs = "4.0.0"
qr2term = "0.3.0"
rusqlite = "0.28.0"

