[package]
name = "youran"
version = "0.2.4"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "code with peace"
license = "MIT"
repository = "https://github.com/hangj/youran"
documentation = "https://docs.rs/youran/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yr"
path = "bin/yr/yr.rs"


[dependencies]
anyhow = "1.0.65"
clap = { version = "4.3.4", features = ["derive"] }
# console = "0.15.1"
dirs = "5.0.1"
qr2term = "0.3.0"
# rusqlite = "0.28.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.28.2", features = ["macros"] }
unicode-width = "0.1.10"


[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
