[package]
name = "youran"
version = "0.2.4"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "code with peace"
license = "MIT"
repository = "https://github.com/hangj/youran"
documentation = "https://docs.rs/youran/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yr"
path = "bin/yr/yr.rs"


[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
# console = "0.15.1"
dirs = "5.0.1"
image = "0.25.0"
qr2term = "0.3.3"
qrcode = "0.14.1"
rusqlite = "0.32.1"
unicode-width = "0.2.0"


[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
